restructure to use subsystem

--- a/src/Terratype/Providers/GoogleMapsV3/config.apperance.html
+++ b/src/Terratype/Providers/GoogleMapsV3/config.apperance.html
@@ -1,8 +1,11 @@
-﻿<div class="umb-editor">
+﻿<div class="umb-el-wrap">
     <label for="terratype_{{model.alias}}_googlemapv3_defaultlocation" class="control-label">
         Default location:
+        <small>
+            Select the default location when displaying this map to a content editor
+        </small>
     </label>
-    <div ng-show="bag.provider.apiKeySuccess" class="umb-editor">
+    <div class="controls">
         <div style="margin-left:170px;margin-top:5px;">
             <div ng-show="bag.provider.apiKeyLoading">
                 <img src="/umbraco/assets/img/loader.gif" />
@@ -12,16 +15,18 @@
                 <span style="color:red;padding-right:10px;">Invalid Google Map API Key</span>
             </div>
 
-            <div ng-show="bag.provider.canSearch" style="margin-bottom:5px;">
-                <input id="terratype_{{model.alias}}_googlemapv3_lookup" class="umb-editor umb-textstring textstring" type="text" placeholder="Search" ng-model="model.value.lookup">
-            </div>
-            <div style="position: relative;overflow: hidden;">
-                <div id="terratype_{{model.alias}}_googlemapv3_lookup" ng-style="map.height">
+            <div ng-show="bag.provider.apiKeySuccess" class="umb-editor">
+                <div ng-show="bag.provider.canSearch" style="margin-bottom:5px;">
+                    <input id="terratype_{{model.alias}}_googlemapv3_lookup" class="umb-editor umb-textstring textstring" type="text" placeholder="Search" ng-model="model.value.lookup">
                 </div>
-            </div>
+                <div style="position:relative;overflow:hidden;">
+                    <div id="terratype_{{model.alias}}_googlemapv3_map" style="height:400px;">
+                    </div>
+                </div>
 
-            <div style="margin-top:5px">
-                <input type="text" id="terratype_{{model.alias}}_googlemapv3_defaultlocation" class="umb-editor umb-textstring textstring" placeholder="latitude (-90.0 to 90.0), longitude (-180.0 to 180.0), zoom (1 to 20)" ng-model="model.value.position.datum" ng-change="checkDatum()" ng-style="bag.position.datumStyle" />
+                <div style="margin-top:5px">
+                    <input type="text" id="terratype_{{model.alias}}_googlemapv3_defaultlocation" class="umb-editor umb-textstring textstring" placeholder="latitude (-90.0 to 90.0), longitude (-180.0 to 180.0), zoom (1 to 20)" ng-model="bag.position.datumText" ng-change="datumChange()" ng-style="bag.position.datumStyle" />
+                </div>
             </div>
         </div>
     </div>
