--- a/src/Terratype/Providers/config.html
+++ b/src/Terratype/Providers/config.html
@@ -1,11 +1,16 @@
 ﻿<div class="ng-cloak terratype" ng-controller="terratype" ng-init="initConfig()" ng-disabled="!loading">
-    <div class="umb-editor">
+    <div class="umb-el-wrap">
         <label for="terratype_{{model.alias}}_provider" class="control-label">
             Map Provider:
+            <small>
+                Select which system you wish to use to display maps
+            </small>
         </label>
-        <select id="terratype_{{model.alias}}_provider" ng-model="model.value.provider.id" class="umb-editor" ng-change="setProvider(model.value.provider.id)">
-            <option ng-repeat="p in bag.providers" value="{{p.id}}">{{p.name}}</option>
-        </select>
+        <div class="controls">
+            <select id="terratype_{{model.alias}}_provider" ng-model="model.value.provider.id" class="umb-editor" ng-change="setProvider(model.value.provider.id)">
+                <option ng-repeat="p in bag.providers" value="{{p.id}}">{{p.name}}</option>
+            </select>
+        </div>
     </div>
     <br />
     <fieldset ng-show="bag.provider.id != null" style="padding-left:15px;">
@@ -20,17 +25,18 @@
             <h4 style="background-color:#dfdfdf;padding:5px 0;">
                 Configure
             </h4>
-            <div class="umb-editor">
+            <div class="umb-el-wrap">
                 <label for="terratype_{{model.alias}}_coordinatesystem" class="control-label">
                     Coordinate System:
-                </label>
-                <select id="terratype_{{model.alias}}_coordinatesystem" ng-model="model.value.position.id" class="umb-editor" ng-change="setCoordinateSystems(model.value.position.id)">
-                    <option ng-repeat="c in bag.provider.coordinateSystems" value="{{c.id}}">{{c.name}}</option>
-                </select>
-            </div>
-            <div class="umb-editor" ng-show="model.value.position.id != null">
-                <div style="margin-left:170px;margin-top:5px;">
                     <small>
+                        Which Geodetic Coordinate System do you wish to use to present and store locations
+                    </small>
+                </label>
+                <div class="controls">
+                    <select id="terratype_{{model.alias}}_coordinatesystem" ng-model="model.value.position.id" class="umb-editor" ng-change="setCoordinateSystems(model.value.position.id)">
+                        <option ng-repeat="c in bag.provider.coordinateSystems" value="{{c.id}}">{{c.name}}</option>
+                    </select>
+                    <small ng-show="model.value.position.id != null">
                         <a href="{{bag.provider.position.referenceUrl}}" target="_blank">
                             {{bag.provider.position.description}}
                         </a>
@@ -45,11 +51,16 @@
             <h4 style="background-color:#dfdfdf;padding:5px 0;">
                 Apperance
             </h4>
-            <div class="umb-editor">
+            <div class="umb-el-wrap">
                 <label for="terratype_{{model.alias}}_height" class="control-label">
                     Height:
+                    <small>
+                        The height of the map as displayed to the content editor in pixels
+                    </small>
                 </label>
-                <input type="number" id="terratype_{{model.alias}}_height" ng-model="model.value.height" class="umb-editor" placeholder="Height of map in pixels" />
+                <div class="controls">
+                    <input type="number" id="terratype_{{model.alias}}_height" ng-model="model.value.height" class="umb-editor" placeholder="Height of map in pixels" />
+                </div>
             </div>
             <ng-include src="bag.provider.views.apperance" onload="bag.provider.apperanceSetup()">
             </ng-include>
