--- a/src/Terratype/Providers/GoogleMapsV3/config.definition.html
+++ b/src/Terratype/Providers/GoogleMapsV3/config.definition.html
@@ -1,4 +1,4 @@
-﻿<div class="umb-el-wrap">
+﻿<div class="umb-el-wrap control-group">
     <label for="terratype_{{model.alias}}_googlemapv3_apikey" class="control-label">
         Google API Key:
         <small>
@@ -16,7 +16,7 @@
                 <div ng-show="bag.provider.apiKeyFailed">
                     <img src="/umbraco/images/false.png" />
                     <span style="color:red;padding-right:10px;">Invalid API Key</span>
-                    <button ng-click="bag.provider.loadMap()">Retry</button>
+                    <button ng-click="bag.provider.reloadMap()">Retry</button>
                 </div>
                 <div ng-show="bag.provider.apiKeySuccess">
                     <img src="/umbraco/images/true.png" />
@@ -26,7 +26,7 @@
         </div>
     </div>
 </div>
-<div class="umb-el-wrap">
+<div class="umb-el-wrap control-group">
     <label for="terratype_{{model.alias}}_googlemapv3_forcehttps" class="control-label">
         Force Https:
         <small>
@@ -34,6 +34,166 @@
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{model.alias}}_googlemapv3_forcehttps" type="checkbox" ng-model="model.value.provider.forceHttps" class="umb-editor" />
+        <input id="terratype_{{model.alias}}_googlemapv3_forcehttps" type="checkbox" ng-model="model.value.provider.forceHttps" ng-change="bag.provider.forceHttpsChange()" />
+    </div>
+</div>
+<div class="umb-el-wrap control-group">
+    <label for="terratype_{{model.alias}}_googlemapv3_language" class="control-label">
+        Language:
+        <small>
+            Primary language used to display places
+        </small>
+    </label>
+    <div class="controls">
+        <select id="terratype_{{model.alias}}_googlemapv3_language" ng-model="model.value.provider.language" class="umb-editor" ng-change="bag.provider.languageChange()">
+            <option value="">Use Umbraco</option>
+            <option value="ab">Abkhazian</option>
+            <option value="aa">Afar</option>
+            <option value="af">Afrikaans</option>
+            <option value="sq">Albanian</option>
+            <option value="am">Amharic</option>
+            <option value="ar">Arabic</option>
+            <option value="an">Aragonese</option>
+            <option value="hy">Armenian</option>
+            <option value="as">Assamese</option>
+            <option value="ay">Aymara</option>
+            <option value="az">Azerbaijani</option>
+            <option value="ba">Bashkir</option>
+            <option value="eu">Basque</option>
+            <option value="bn">Bengali (Bangla)</option>
+            <option value="dz">Bhutani</option>
+            <option value="bh">Bihari</option>
+            <option value="bi">Bislama</option>
+            <option value="br">Breton</option>
+            <option value="bg">Bulgarian</option>
+            <option value="my">Burmese</option>
+            <option value="be">Byelorussian (Belarusian)</option>
+            <option value="km">Cambodian</option>
+            <option value="ca">Catalan</option>
+            <option value="zh">Chinese</option>
+            <option value="zh-Hans">Chinese (Simplified)</option>
+            <option value="zh-Hant">Chinese (Traditional)</option>
+            <option value="co">Corsican</option>
+            <option value="hr">Croatian</option>
+            <option value="cs">Czech</option>
+            <option value="da">Danish</option>
+            <option value="nl">Dutch</option>
+            <option value="en">English</option>
+            <option value="eo">Esperanto</option>
+            <option value="et">Estonian</option>
+            <option value="fo">Faeroese</option>
+            <option value="fa">Farsi</option>
+            <option value="fj">Fiji</option>
+            <option value="fi">Finnish</option>
+            <option value="fr">French</option>
+            <option value="fy">Frisian</option>
+            <option value="gl">Galician</option>
+            <option value="gd">Gaelic (Scottish)</option>
+            <option value="gv">Gaelic (Manx)</option>
+            <option value="ka">Georgian</option>
+            <option value="de">German</option>
+            <option value="el">Greek</option>
+            <option value="kl">Greenlandic</option>
+            <option value="gn">Guarani</option>
+            <option value="gu">Gujarati</option>
+            <option value="ht">Haitian Creole</option>
+            <option value="ha">Hausa</option>
+            <option value="he">Hebrew</option>
+            <option value="hi">Hindi</option>
+            <option value="hu">Hungarian</option>
+            <option value="is">Icelandic</option>
+            <option value="io">Ido</option>
+            <option value="id">Indonesian</option>
+            <option value="ia">Interlingua</option>
+            <option value="ie">Interlingue</option>
+            <option value="iu">Inuktitut</option>
+            <option value="ik">Inupiak</option>
+            <option value="ga">Irish</option>
+            <option value="it">Italian</option>
+            <option value="ja">Japanese</option>
+            <option value="jv">Javanese</option>
+            <option value="kn">Kannada</option>
+            <option value="ks">Kashmiri</option>
+            <option value="kk">Kazakh</option>
+            <option value="rw">Kinyarwanda (Ruanda)</option>
+            <option value="ky">Kirghiz</option>
+            <option value="rn">Kirundi (Rundi)</option>
+            <option value="ko">Korean</option>
+            <option value="ku">Kurdish</option>
+            <option value="lo">Laothian</option>
+            <option value="la">Latin</option>
+            <option value="lv">Latvian (Lettish)</option>
+            <option value="li">Limburgish (Limburger)</option>
+            <option value="ln">Lingala</option>
+            <option value="lt">Lithuanian</option>
+            <option value="mk">Macedonian</option>
+            <option value="mg">Malagasy</option>
+            <option value="ms">Malay</option>
+            <option value="ml">Malayalam</option>
+            <option value="mt">Maltese</option>
+            <option value="mi">Maori</option>
+            <option value="mr">Marathi</option>
+            <option value="mo">Moldavian</option>
+            <option value="mn">Mongolian</option>
+            <option value="na">Nauru</option>
+            <option value="ne">Nepali</option>
+            <option value="no">Norwegian</option>
+            <option value="oc">Occitan</option>
+            <option value="or">Oriya</option>
+            <option value="om">Oromo (Afaan Oromo)</option>
+            <option value="ps">Pashto (Pushto)</option>
+            <option value="pl">Polish</option>
+            <option value="pt">Portuguese</option>
+            <option value="pa">Punjabi</option>
+            <option value="qu">Quechua</option>
+            <option value="rm">Rhaeto-Romance</option>
+            <option value="ro">Romanian</option>
+            <option value="ru">Russian</option>
+            <option value="sm">Samoan</option>
+            <option value="sg">Sangro</option>
+            <option value="sa">Sanskrit</option>
+            <option value="sr">Serbian</option>
+            <option value="sh">Serbo-Croatian</option>
+            <option value="st">Sesotho</option>
+            <option value="tn">Setswana</option>
+            <option value="sn">Shona</option>
+            <option value="ii">Sichuan Yi</option>
+            <option value="sd">Sindhi</option>
+            <option value="si">Sinhalese</option>
+            <option value="ss">Siswati</option>
+            <option value="sk">Slovak</option>
+            <option value="sl">Slovenian</option>
+            <option value="so">Somali</option>
+            <option value="es">Spanish</option>
+            <option value="su">Sundanese</option>
+            <option value="sw">Swahili (Kiswahili)</option>
+            <option value="sv">Swedish</option>
+            <option value="tl">Tagalog</option>
+            <option value="tg">Tajik</option>
+            <option value="ta">Tamil</option>
+            <option value="tt">Tatar</option>
+            <option value="te">Telugu</option>
+            <option value="th">Thai</option>
+            <option value="bo">Tibetan</option>
+            <option value="ti">Tigrinya</option>
+            <option value="to">Tonga</option>
+            <option value="ts">Tsonga</option>
+            <option value="tr">Turkish</option>
+            <option value="tk">Turkmen</option>
+            <option value="tw">Twi</option>
+            <option value="ug">Uighur</option>
+            <option value="uk">Ukrainian</option>
+            <option value="ur">Urdu</option>
+            <option value="uz">Uzbek</option>
+            <option value="vi">Vietnamese</option>
+            <option value="vo">Volapük</option>
+            <option value="wa">Wallon</option>
+            <option value="cy">Welsh</option>
+            <option value="wo">Wolof</option>
+            <option value="xh">Xhosa</option>
+            <option value="yi">Yiddish</option>
+            <option value="yo">Yoruba</option>
+            <option value="zu">Zulu</option>
+        </select>
     </div>
 </div>
