--- a/src/Terratype/Providers/GoogleMapsV3/config.apperance.html
+++ b/src/Terratype/Providers/GoogleMapsV3/config.apperance.html
@@ -92,7 +92,7 @@
         </div>
 
         <div ng-show="bag.provider.statusSuccess" class="umb-editor">
-            <div ng-show="bag.provider.canSearch" style="margin-bottom:5px;">
+            <div ng-show="model.value.searchstatus != 0" style="margin-bottom:5px;">
                 <input id="terratype_{{identifier}}_googlemapv3_lookup" class="umb-editor umb-textstring textstring" type="text" placeholder="Search" ng-model="model.value.lookup">
             </div>
             <div style="overflow:hidden;">
@@ -101,7 +101,7 @@
             </div>
 
             <div style="margin-top:5px">
-                <input type="text" id="terratype_{{identifier}}_googlemapv3_defaultlocation" class="umb-editor umb-textstring textstring" placeholder="latitude (-90.0 to 90.0), longitude (-180.0 to 180.0), zoom (1 to 20)" ng-model="bag.position.datumText" ng-change="bag.provider.datumChange(bag.provider, bag.position.datumText)" ng-style="bag.position.datumStyle" />
+                <input type="text" id="terratype_{{identifier}}_googlemapv3_defaultlocation" class="umb-editor umb-textstring textstring" placeholder="latitude (-90.0 to 90.0), longitude (-180.0 to 180.0)" ng-model="bag.position.datumText" ng-change="bag.provider.datumChange(bag.provider, bag.position.datumText)" ng-style="bag.position.datumStyle" />
             </div>
         </div>
     </div>
